# prof4nities

./: .env.example  LICENSE  README.md  pyproject.toml  test.py  test2.py
.github/: copilot-instructions.md
.github/instructions/: numpy.instructions.md
.github/workflows/: publish.yml  unit-tests.yml
prof4nities/: __init__.py  censor.py  config.py  enums.py  filter.py
prof4nities/manager/: __init__.py  cache.py  wordlist.py
prof4nities/models/: __init__.py  character.py  metric.py  word.py
prof4nities/utils/: __init__.py  check_type.py  mapping.py
tests/: test_censor.py  test_filter.py
tests/manager/: test_cache.py  test_wordlist.py
tests/models/: test_character.py  test_metric.py  test_word.py
tests/utils/: test_check_env_variable.py  test_check_type.py  test_check_value.py  test_ensure_file.py  test_ensure_path.py  test_pipeline.py  test_terminal_colors.py  test_warnings.py
