[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prof4nities"
version = "0.1.2"
description = "A Python library for filtering profane words using string matching techniques."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "rapidfuzz>=3.14.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
    "prof4nities",
]

[tool.uv.sources]
src = { workspace = true }
